chromeos: makes changing modal type not reparent window

Ash in mash mode was reparenting system modal dialogs. Problem is the
code was using GetDefaultParent(), which makes some assumptions that
are not always right for Chrome code. This fixes the issue by making
it so that when the modal type changes ash doesn't change the parent.

I suspect we will have to revisit this at some point, but this is the
easy fix for now.

BUG=743064
TEST=covered by test

Change-Id: I21b097b5ad2c52e153b0880ec33c96e950fad624
Reviewed-on: https://chromium-review.googlesource.com/580631
Reviewed-by: James Cook <jamescook@chromium.org>
Commit-Queue: Scott Violet <sky@chromium.org>
Cr-Commit-Position: refs/heads/master@{#488503}
Former-commit-id: 65326efd379044957448a6846bf05a5f96f3ed46